--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,8 +39,8 @@ endif(OpenCV_FOUND)
 SET(NAME giftgrab)
 
 # Library include dirs
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/api)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/utils)
+INCLUDE_DIRECTORIES(api)
+INCLUDE_DIRECTORIES(utils)
 
 # Variable for header and source files
 SET(HEADERS
@@ -66,6 +66,7 @@ OPTION(USE_LIBVLC "Use libVLC for grabbing frames" OFF)
 # Video files
 if(USE_FILES)
     ADD_DEFINITIONS(-DUSE_FILES)
+    INCLUDE_DIRECTORIES(offline)
     LIST(APPEND HEADERS offline/opencv_video_source.h)
     LIST(APPEND SOURCES offline/opencv_video_source.cpp)
 endif(USE_FILES)
@@ -75,6 +76,7 @@ if(USE_BLACKMAGIC)
     FIND_PACKAGE(BlackMagicSDK CONFIG REQUIRED)
     if(BlackMagicSDK_FOUND)
         INCLUDE_DIRECTORIES(${BlackMagicSDK_INCLUDE_DIR})
+        INCLUDE_DIRECTORIES(blackmagic)
         ADD_DEFINITIONS(-DUSE_BLACKMAGIC)
         LIST(APPEND HEADERS blackmagic/blackmagic_frame_grabber.h)
         LIST(APPEND SOURCES blackmagic/blackmagic_frame_grabber.cpp)
@@ -91,6 +93,7 @@ if(USE_LIBVLC)
     FIND_PACKAGE(LIBVLC REQUIRED)
     if(LIBVLC_FOUND)
         ADD_DEFINITIONS(-DUSE_LIBVLC)
+        INCLUDE_DIRECTORIES(vlc)
         LIST(APPEND HEADERS vlc/vlc_video_source.h)
         LIST(APPEND SOURCES vlc/vlc_video_source.cpp)
         LIST(APPEND LIBS ${LIBVLC_LIBRARY})
