added doxygen configuration to CMake file, as well as a custom doxyfile

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,3 +118,19 @@ INSTALL(TARGETS ${NAME}
     LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
     )
+
+# Documentation
+OPTION(BUILD_DOC "Build source code documentation" OFF)
+if(BUILD_DOC)
+    FIND_PACKAGE(Doxygen)
+    if(DOXYGEN_FOUND)
+        SET(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/../doc/Doxyfile.in)
+        SET(DOXYFILE ${CMAKE_CURRENT_BINARY_DIR}/doc/Doxyfile)
+        CONFIGURE_FILE(${DOXYFILE_IN}
+            ${DOXYFILE} @ONLY)
+        ADD_CUSTOM_TARGET(doc ALL
+            ${DOXYGEN_EXECUTABLE} ${DOXYFILE}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc
+            COMMENT "Generating API documentation with Doxygen" VERBATIM)
+    endif(DOXYGEN_FOUND)
+endif(BUILD_DOC)
