--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,12 +20,7 @@ before_script:
 # Linux ##################
 gift-linux:
   script:
-    - rm -rf "$GiftGrab_BUILD_DIR"
-    - mkdir -p "$GiftGrab_BUILD_DIR"
-    - cd "$GiftGrab_BUILD_DIR"
-    - cmake -D CMAKE_INSTALL_PREFIX="$INSTALL_DIR" -D USE_FILES=ON -D BUILD_DOC=ON "$GiftGrab_SOURCE_DIR"
-    - make -j
-    - make install
+    - "$CI_SCRIPTS_DIR/build-linux.sh"
     - "$CI_SCRIPTS_DIR/deploy-linux.sh"
   tags:
     - gift-linux
