Issue #21: stubs for proposed API for video saving targets

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,6 +47,7 @@ INCLUDE_DIRECTORIES(utils)
 # Variable for header and source files
 SET(HEADERS
     api/ivideosource.h
+    api/ivideotarget.h
     api/videoframe.h
     api/maskframe.h
     api/factory.h
