Issue #21: renamed test file, as codec and port can be passed as parameters now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -145,9 +145,9 @@ endif(BUILD_DOC)
 OPTION(BUILD_TESTS "Build tests" OFF)
 if(BUILD_TESTS)
     if(USE_EPIPHAN)
-        SET(TEST_NAME save_1min_epiphan_dvi_xvid)
+        SET(TEST_NAME save_1min_epiphan)
         ADD_EXECUTABLE(${TEST_NAME}
-            ${CMAKE_CURRENT_SOURCE_DIR}/tests/save_1min_epiphan_dvi_xvid.cpp)
+            ${CMAKE_CURRENT_SOURCE_DIR}/tests/save_1min_epiphan.cpp)
 TARGET_LINK_LIBRARIES(${TEST_NAME} ${NAME} ${LIBS})
     endif(USE_EPIPHAN)
 endif(BUILD_TESTS)
