Issue #21: BGRA to YUV420p conversion prototype using ffmpeg instead of OpenCV (not supported)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,6 +106,7 @@ if(USE_FFMPEG)
         ${FFmpeg_DIR}/lib/libavformat.so
         ${FFmpeg_DIR}/lib/libavcodec.so
         ${FFmpeg_DIR}/lib/libavutil.so
+        ${FFmpeg_DIR}/lib/libswscale.so
     )
 endif(USE_FFMPEG)
 
