--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -163,12 +163,17 @@ if(BUILD_TESTS)
     if(USE_EPIPHAN)
         SET(TEST_NAME save_1min_epiphan)
         ADD_EXECUTABLE(${TEST_NAME}
-            ${CMAKE_CURRENT_SOURCE_DIR}/tests/save_1min_epiphan.cpp)
+            tests/save_1min_epiphan.cpp)
         TARGET_LINK_LIBRARIES(${TEST_NAME} ${NAME} ${LIBS})
     endif(USE_EPIPHAN)
 
     SET(TEST_NAME save_1min_colour_chessboard)
     ADD_EXECUTABLE(${TEST_NAME}
-        ${CMAKE_CURRENT_SOURCE_DIR}/tests/save_1min_colour_chessboard.cpp)
+        tests/save_1min_colour_chessboard.cpp)
+    TARGET_LINK_LIBRARIES(${TEST_NAME} ${NAME} ${LIBS})
+
+    SET(TEST_NAME save_from_file)
+    ADD_EXECUTABLE(${TEST_NAME}
+        tests/save_from_file.cpp)
     TARGET_LINK_LIBRARIES(${TEST_NAME} ${NAME} ${LIBS})
 endif(BUILD_TESTS)
