Issue #26: added CMake configuration needed for Boost.Python

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -168,6 +168,7 @@ if(BUILD_DOC)
     endif(DOXYGEN_FOUND)
 endif(BUILD_DOC)
 
+# Tests
 OPTION(BUILD_TESTS "Build tests" OFF)
 if(BUILD_TESTS)
     SET(TEST_NAME save_frames)
@@ -175,3 +176,12 @@ if(BUILD_TESTS)
         tests/save_frames.cpp)
     TARGET_LINK_LIBRARIES(${TEST_NAME} ${NAME} ${LIBS})
 endif(BUILD_TESTS)
+
+# Python wrappers
+OPTION(BUILD_PYTHON "Build GiftGrab Python API" OFF)
+if(BUILD_PYTHON)
+    FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
+    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
+    FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
+    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+endif(BUILD_PYTHON)
