--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -184,4 +184,9 @@ if(BUILD_PYTHON)
     INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
     FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+    SET(NAME_PYTHON py${NAME})
+    ADD_LIBRARY(${NAME_PYTHON} SHARED python/wrapper.cpp)
+    TARGET_LINK_LIBRARIES(${NAME_PYTHON} ${Boost_LIBRARIES} ${NAME})
+    # no lib prefix
+    SET_TARGET_PROPERTIES(${NAME_PYTHON} PROPERTIES PREFIX "" )
 endif(BUILD_PYTHON)
