--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -187,6 +187,7 @@ if(BUILD_PYTHON)
     SET(NAME_PYTHON py${NAME})
     ADD_LIBRARY(${NAME_PYTHON} SHARED python/wrapper.cpp)
     TARGET_LINK_LIBRARIES(${NAME_PYTHON} ${Boost_LIBRARIES} ${NAME})
+    FILE(COPY tests/save_frames.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
     # no lib prefix
     SET_TARGET_PROPERTIES(${NAME_PYTHON} PROPERTIES PREFIX "" )
 endif(BUILD_PYTHON)
