Issue #26: exposed VideoSourceOpenCV - building GiftGrab as SHARED to avoid -fPIC linking error - Python test script modified for VideoSourceOpenCV as well

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -137,7 +137,7 @@ if(USE_LIBVLC)
 endif(USE_LIBVLC)
 
 # Compile and link
-ADD_LIBRARY(${NAME} ${HEADERS} ${SOURCES})
+ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
 
 # Install
