Issue #25: added scoped Boost auto_cpu_timer's to different steps

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,6 +136,14 @@ if(USE_LIBVLC)
     endif(LIBVLC_FOUND)
 endif(USE_LIBVLC)
 
+# Performance benchmarking
+OPTION(BUILD_PERFORMANCE_REPORTS "Support for performance reports" OFF)
+if(BUILD_PERFORMANCE_REPORTS)
+    FIND_PACKAGE(Boost COMPONENTS timer REQUIRED)
+    ADD_DEFINITIONS(-DUSE_BOOST_TIMER)
+    LIST(APPEND LIBS ${Boost_LIBRARIES})
+endif(BUILD_PERFORMANCE_REPORTS)
+
 # Compile and link
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
