Issue #25: standardised CMake timer option and related macro to GENERATE_PERFORMANCE_OUTPUT

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -142,12 +142,13 @@ if(USE_LIBVLC)
 endif(USE_LIBVLC)
 
 # Performance benchmarking
-OPTION(BUILD_PERFORMANCE_REPORTS "Support for performance reports" OFF)
-if(BUILD_PERFORMANCE_REPORTS)
+OPTION(GENERATE_PERFORMANCE_OUTPUT
+    "Support for performance (timer) reports via Boost.Timer" OFF)
+if(GENERATE_PERFORMANCE_OUTPUT)
     FIND_PACKAGE(Boost COMPONENTS timer REQUIRED)
-    ADD_DEFINITIONS(-DUSE_BOOST_TIMER)
+    ADD_DEFINITIONS(-DGENERATE_PERFORMANCE_OUTPUT)
     LIST(APPEND LIBS ${Boost_LIBRARIES})
-endif(BUILD_PERFORMANCE_REPORTS)
+endif(GENERATE_PERFORMANCE_OUTPUT)
 
 # Compile and link
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
