Issue #25: marked GENERATE_PERFORMANCE_OUTPUT as advanced CMake option

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -144,6 +144,7 @@ endif(USE_LIBVLC)
 # Performance benchmarking
 OPTION(GENERATE_PERFORMANCE_OUTPUT
     "Support for performance (timer) reports via Boost.Timer" OFF)
+MARK_AS_ADVANCED(GENERATE_PERFORMANCE_OUTPUT)
 if(GENERATE_PERFORMANCE_OUTPUT)
     FIND_PACKAGE(Boost COMPONENTS timer REQUIRED)
     ADD_DEFINITIONS(-DGENERATE_PERFORMANCE_OUTPUT)
