Issue #31: added cmake configuration as well as stubs for new video source and video frame classes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,26 @@ if(USE_LIBVLC)
     endif(LIBVLC_FOUND)
 endif(USE_LIBVLC)
 
+# Support for I420 (YUV420p) colour space
+OPTION(USE_COLOUR_SPACE_I420
+    "Support from grabbing frames in I420 colour space instead of BGR24" OFF)
+if(USE_COLOUR_SPACE_I420)
+    SET(USE_EPIPHANSDK ON)
+    ADD_DEFINITIONS(-DUSE_COLOUR_SPACE_I420)
+    LIST(APPEND HEADERS api/videoframe_i420.h)
+    LIST(APPEND SOURCES api/videoframe_i420.cpp)
+endif(USE_COLOUR_SPACE_I420)
+
+# Epiphan SDK video source
+if(USE_EPIPHANSDK)
+    FIND_PACKAGE(EpiphanSDK CONFIG REQUIRED)
+    INCLUDE_DIRECTORIES(${EpiphanSDK_INCLUDE_DIR})
+    INCLUDE_DIRECTORIES(epiphansdk)
+    LIST(APPEND LIBS ${EpiphanSDK_LIBS})
+    LIST(APPEND HEADERS epiphansdk/epiphansdk_video_source.h)
+    LIST(APPEND SOURCES epiphansdk/epiphansdk_video_source.cpp)
+endif(USE_EPIPHANSDK)
+
 # Performance benchmarking
 OPTION(GENERATE_PERFORMANCE_OUTPUT
     "Support for performance (timer) reports via Boost.Timer" OFF)
