--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,3 +24,11 @@ gift-linux:
     - "$CI_SCRIPTS_DIR/deploy-linux.sh"
   tags:
     - gift-linux
+
+# UZ Leuven OR Workstation 1603 - see GiftGrab#46
+or-recording-compatibility:
+  script:
+    - "$CI_SCRIPTS_DIR/build-uzl1603.sh"
+    - "$CI_SCRIPTS_DIR/test-uzl1603.sh"
+  tags:
+    - uzl1603
