UZL1603 compatibility CI build script runs only with #31 branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,3 +32,5 @@ or-recording-compatibility:
     - "$CI_SCRIPTS_DIR/test-uzl1603.sh"
   tags:
     - uzl1603
+  only:
+    - 31-i420-colour-space-on-epiphan
