Issue #31: including current branch in CI build script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,3 +34,4 @@ or-recording-compatibility:
     - uzl1603
   only:
     - 31-i420-colour-space-on-epiphan
+    - 31-i420-colour-space-on-epiphan-clean-start
