Issue #48: added current branch to OR compatibility builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,3 +35,4 @@ or-recording-compatibility:
   only:
     - 31-i420-colour-space-on-epiphan
     - 31-i420-colour-space-on-epiphan-clean-start
+    - 48-i420-frame-support-in-video-targets
