--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,3 +36,4 @@ or-recording-compatibility:
     - 31-i420-colour-space-on-epiphan
     - 31-i420-colour-space-on-epiphan-clean-start
     - 48-i420-frame-support-in-video-targets
+    - 48-i420-frame-support-in-video-targets-extend-test-suite-to-i420
