Issue #48: added performance timers to dvi2pcieduo.cpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -166,7 +166,7 @@ OPTION(GENERATE_PERFORMANCE_OUTPUT
     "Support for performance (timer) reports via Boost.Timer" OFF)
 MARK_AS_ADVANCED(GENERATE_PERFORMANCE_OUTPUT)
 if(GENERATE_PERFORMANCE_OUTPUT)
-    FIND_PACKAGE(Boost COMPONENTS timer REQUIRED)
+    FIND_PACKAGE(Boost COMPONENTS timer system REQUIRED)
     ADD_DEFINITIONS(-DGENERATE_PERFORMANCE_OUTPUT)
     LIST(APPEND LIBS ${Boost_LIBRARIES})
 endif(GENERATE_PERFORMANCE_OUTPUT)
