--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,3 +39,4 @@ or-recording-compatibility:
     - 31-i420-colour-space-on-epiphan-clean-start
     - 48-i420-frame-support-in-video-targets
     - 48-i420-frame-support-in-video-targets-extend-test-suite-to-i420
+    - 43-test-long-duration-recordings
