Issue #59: installing pygiftgrab and epiphan module as well

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -174,18 +174,7 @@ endif(GENERATE_PERFORMANCE_OUTPUT)
 # Compile and link
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
-
-# Install
-SET(GiftGrab_PATH_SUFFIX giftgrab)
-INSTALL(
-    FILES ${HEADERS} cmake/GiftGrabConfig.cmake
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${GiftGrab_PATH_SUFFIX}
-    )
-INSTALL(TARGETS ${NAME}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${GiftGrab_PATH_SUFFIX}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
-    )
+LIST(APPEND INSTALLABLES ${NAME})
 
 # Documentation
 OPTION(BUILD_DOC "Build source code documentation" OFF)
@@ -227,5 +216,23 @@ if(BUILD_PYTHON)
     TARGET_LINK_LIBRARIES(${NAME_PYTHON} ${Boost_LIBRARIES} ${NAME})
     FILE(COPY tests/save_frames.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
     # no lib prefix
-    SET_TARGET_PROPERTIES(${NAME_PYTHON} PROPERTIES PREFIX "" )
+    SET_TARGET_PROPERTIES(${NAME_PYTHON} PROPERTIES PREFIX "")
+    LIST(APPEND INSTALLABLES ${NAME_PYTHON})
 endif(BUILD_PYTHON)
+
+# Install
+SET(GiftGrab_PATH_SUFFIX giftgrab)
+INSTALL(
+    FILES ${HEADERS} cmake/GiftGrabConfig.cmake
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${GiftGrab_PATH_SUFFIX}
+    )
+INSTALL(
+    FILES ${CMAKE_CURRENT_SOURCE_DIR}/python/modules/epiphan.py
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
+    )
+INSTALL(
+    TARGETS ${INSTALLABLES}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${GiftGrab_PATH_SUFFIX}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
+    )
