--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,7 +36,7 @@ OPTION(USE_FILES "Support for loading video from files" OFF)
 OPTION(USE_EPIPHAN "Support for streaming video using Epiphan framegrabbers" OFF)
 OPTION(USE_BLACKMAGIC "Support for streaming video using BlackMagic framegrabbers" OFF)
 OPTION(USE_FFMPEG "Support for saving video to files using FFmpeg" OFF)
-
+OPTION(USE_EPIPHAN_DVI2PCIE_DUO "Support for Epiphan DVI2PCIe Duo" OFF)
 # OpenCV
 FIND_PACKAGE(OpenCV REQUIRED)
 if(OpenCV_FOUND)
@@ -202,6 +202,11 @@ if(BUILD_TESTS)
     SET(TEST_NAME dvi2pcieduo)
     ADD_EXECUTABLE(${TEST_NAME} tests/epiphan/dvi2pcieduo.cpp)
     TARGET_LINK_LIBRARIES(${TEST_NAME} ${NAME} ${LIBS})
+
+    ENABLE_TESTING()
+    if(USE_EPIPHAN_DVI2PCIE_DUO)
+        SUBDIRS(tests/epiphan/dvi2pcieduo)
+    endif(USE_EPIPHAN_DVI2PCIE_DUO)
 endif(BUILD_TESTS)
 
 # Python wrappers
