Issue #67: moved Python tests from codec-specific folder to generic folder, in preparation for Xvid tests (virtually same as H265 tests)

--- a/src/tests/h265/CMakeLists.txt
+++ b/src/tests/h265/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE(COPY
-    ${CMAKE_SOURCE_DIR}/tests/h265/test.py
+    ${CMAKE_SOURCE_DIR}/tests/target/test.py
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
 )
 
