Issue #67: parametrised target tests with codec

--- a/src/tests/h265/CMakeLists.txt
+++ b/src/tests/h265/CMakeLists.txt
@@ -1,11 +1,12 @@
 FILE(COPY
     ${CMAKE_SOURCE_DIR}/tests/target/test.py
+    ${CMAKE_SOURCE_DIR}/tests/target/conftest.py
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 SET(NAME_TEST Test_H265)
 ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test test.py
+    COMMAND py.test --codec=H265 test.py
 )
 # to avoid copying pygiftgrab
 SET_TESTS_PROPERTIES(${NAME_TEST}
