Issue #67: dvi2pcieduo folder now contains (failing) simplified tests (no real-time, but only unit tests)

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -1,24 +1,22 @@
 FILE(COPY
-    ${CMAKE_SOURCE_DIR}/python/modules/epiphan.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/conftest.py
-    ${CMAKE_SOURCE_DIR}/tests/epiphan/config
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
 )
-FILE(COPY
-    ${CMAKE_SOURCE_DIR}/python/modules/example_epiphan/
-    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/config
-    FILES_MATCHING PATTERN *.yml
+
+SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_SDI)
+ADD_TEST(NAME ${NAME_TEST}
+    COMMAND py.test --port=SDI test.py
+)
+# to avoid copying pygiftgrab
+SET_TESTS_PROPERTIES(${NAME_TEST}
+    PROPERTIES ENVIRONMENT
+    "PYTHONPATH=${CMAKE_BINARY_DIR}:$ENV{PYTHONPATH}"
 )
 
-SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo)
-if(USE_COLOUR_SPACE_I420)
-    SET(COLOUR_SPACE I420)
-else(USE_COLOUR_SPACE_I420)
-    SET(COLOUR_SPACE BGR24)
-endif(USE_COLOUR_SPACE_I420)
+SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_DVI)
 ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --colour-space=${COLOUR_SPACE} test.py
+    COMMAND py.test --port=DVI test.py
 )
 # to avoid copying pygiftgrab
 SET_TESTS_PROPERTIES(${NAME_TEST}
