Issue #67: activated UZL1603 integration tests on our OR stack

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ or-recording-compatibility:
     - "$CI_SCRIPTS_DIR/build-uzl1603-i420.sh"
     - "$CI_SCRIPTS_DIR/test-uzl1603-i420.sh"
   tags:
-    - uzl1603
+    - gift-surg-storz-stack
   only:
     - 31-i420-colour-space-on-epiphan
     - 31-i420-colour-space-on-epiphan-clean-start
