Issue #67: EpiphanSDK_DIR set in main CI script, rather than in shell script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ or-recording-compatibility:
   script:
     - export PATH=/home/gitlab-runner/environments/giftgrab/usr/local/bin:$PATH
     - export LD_LIBRARY_PATH=/home/gitlab-runner/environments/giftgrab/opt/ffmpeg/3.0.1/lib:$LD_LIBRARY_PATH
+    - export EpiphanSDK_DIR=/home/gitlab-runner/environments/giftgrab/opt/include/epiphansdk
     - "$CI_SCRIPTS_DIR/build-uzl1603.sh"
     - "$CI_SCRIPTS_DIR/test-uzl1603.sh"
     - "$CI_SCRIPTS_DIR/build-uzl1603-i420.sh"
