Issue #67: num_lines command defined in main CI script to avoid duplication

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ or-recording-compatibility:
     - export LD_LIBRARY_PATH=/home/gitlab-runner/environments/giftgrab/opt/ffmpeg/3.0.1/lib:$LD_LIBRARY_PATH
     - export EpiphanSDK_DIR=/home/gitlab-runner/environments/giftgrab/opt/include/epiphansdk
     - export FFmpeg_DIR=/home/gitlab-runner/environments/giftgrab/opt/ffmpeg/3.0.1
+    - export num_lines=$(v2u | grep --count "no signal detected")
     - "$CI_SCRIPTS_DIR/build-uzl1603.sh"
     - "$CI_SCRIPTS_DIR/test-uzl1603.sh"
     - "$CI_SCRIPTS_DIR/build-uzl1603-i420.sh"
