--- a/src/python/modules/example_epiphan/sdi-i420.yml
+++ b/src/python/modules/example_epiphan/sdi-i420.yml
@@ -1,5 +1,5 @@
 port: SDI
 colour_space: I420
 frame_rate: 40.0
-file_path: /tmp/giftgrab/test-data-fetoscope
+file_path: ./test-data-fetoscope
 timeout_limit: 20.0
