--- a/src/python/modules/example_epiphan/sdi.yml
+++ b/src/python/modules/example_epiphan/sdi.yml
@@ -1,5 +1,5 @@
 port: SDI
 colour_space: BGR24
 frame_rate: 28.0
-file_path: /tmp/giftgrab/test-data-fetoscope
+file_path: ./test-data-fetoscope
 timeout_limit: 20.0
