Issue #67: renamed test.py of dvi2pcieduo to test_unit.py

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE(COPY
-    ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test.py
+    ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test_unit.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test_realtime.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/conftest.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/config
@@ -20,7 +20,7 @@ SET(PYTHONPATH "${CMAKE_SOURCE_DIR}/python/modules:${PYTHONPATH}")
 
 SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_SDI)
 ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --port=SDI test.py
+    COMMAND py.test --port=SDI test_unit.py
 )
 SET_TESTS_PROPERTIES(${NAME_TEST}
     PROPERTIES ENVIRONMENT
@@ -29,7 +29,7 @@ SET_TESTS_PROPERTIES(${NAME_TEST}
 
 SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_DVI)
 ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --port=DVI test.py
+    COMMAND py.test --port=DVI test_unit.py
 )
 SET_TESTS_PROPERTIES(${NAME_TEST}
     PROPERTIES ENVIRONMENT
