Issue #67: colour space-based selection of real-time tests, until (maybe) merged in #65

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -36,20 +36,22 @@ SET_TESTS_PROPERTIES(${NAME_TEST}
     "PYTHONPATH=${PYTHONPATH}"
 )
 
-SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_BGR24)
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --colour-space=BGR24 test_realtime.py
-)
-SET_TESTS_PROPERTIES(${NAME_TEST}
-    PROPERTIES ENVIRONMENT
-    "PYTHONPATH=${PYTHONPATH}"
-)
-
-SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_I420)
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --colour-space=I420 test_realtime.py
-)
-SET_TESTS_PROPERTIES(${NAME_TEST}
-    PROPERTIES ENVIRONMENT
-    "PYTHONPATH=${PYTHONPATH}"
-)
+if(NOT USE_COLOUR_SPACE_I420)
+    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_BGR24)
+    ADD_TEST(NAME ${NAME_TEST}
+        COMMAND py.test --colour-space=BGR24 test_realtime.py
+    )
+    SET_TESTS_PROPERTIES(${NAME_TEST}
+        PROPERTIES ENVIRONMENT
+        "PYTHONPATH=${PYTHONPATH}"
+    )
+else(NOT USE_COLOUR_SPACE_I420)
+    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_MultiThreaded_I420)
+    ADD_TEST(NAME ${NAME_TEST}
+        COMMAND py.test --colour-space=I420 test_realtime.py
+    )
+    SET_TESTS_PROPERTIES(${NAME_TEST}
+        PROPERTIES ENVIRONMENT
+        "PYTHONPATH=${PYTHONPATH}"
+    )
+endif(NOT USE_COLOUR_SPACE_I420)
