--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,3 +49,4 @@ or-recording-compatibility:
     - 60-videoframe_i420-header-not-protected-by-i420-macro
     - 67-create-user-friendly-tests-activate-storz-ci
     - 67-create-user-friendly-tests
+    - 65-restructure-cmake-build-process
