Issue #65: OpenCV requiring element inclusions conditional upon USE_OPENCV macro now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,7 @@ if(USE_OPENCV)
     FIND_PACKAGE(OpenCV REQUIRED)
     if(OpenCV_FOUND)
         INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
+        ADD_DEFINITIONS(-DUSE_OPENCV)
     else(OpenCV_FOUND)
         MESSAGE(FATAL_ERROR "OpenCV could not be found. This library requires OpenCV.")
     endif(OpenCV_FOUND)
