Issue #65: bare-bones building without docs now, and added fatal error when using BUILD_TESTS without BUILD_PYTHON

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -204,6 +204,10 @@ endif(BUILD_DOC)
 # Tests
 OPTION(BUILD_TESTS "Build tests" OFF)
 if(BUILD_TESTS)
+    if(NOT BUILD_PYTHON)
+        MESSAGE(FATAL_ERROR "Tests currently depend on Python support")
+    endif()
+
     ENABLE_TESTING()
 
     if(USE_EPIPHAN_DVI2PCIE_DUO)
